Initial commit of Truchet Tiles

--- a/main.htm
+++ b/main.htm
@@ -72,6 +72,7 @@ Algorithm:
 <option value=mosaic.js>Mosaic</option>
 <option value=subline.js>Subline</option>
 <option value=springs.js>Springs</option>
+<option value=truchetLines.js>Truchet Tile</option>
 <option value=waves.js>Waves</option>
 <option value=needles.js>Needles</option>
 <option value=implode.js>Implode</option>
